--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,116 +1,44 @@
 .container {
-  padding: 0 2rem;
+  position: relative;
+  left: 80px;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+  justify-content: flex-end;
+  background: rgb(191, 181, 152);
+  position: relative;
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+  .logo {
+    display: flex;
+    justify-content: center;
+    position: absolute;
     width: 100%;
-    flex-direction: column;
+    margin-top: 1rem;
+    margin-right: 2rem;
+  }
+  .headerItem {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    border: none !important;
+    color: white;
+    font-size: 1.7rem;
+    cursor: pointer;
+    z-index: 2;
+
+    &:hover{
+      text-decoration: underline;
+    }
+
+    & span {
+      margin-left: 1rem;
+    }
+  }
+  .account {
+    margin-right: 8rem;
+    margin-left: 5rem;
   }
 }
+
+
