Display products on home page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,7 +5,7 @@
 
 .main {
   .carouselItem {
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,47 @@
   }
   .carouselImg {
     width: 100%;
+    padding-bottom: 5px;
 
+  }
+
+  .mixMatchSection {
+    margin: 0 3rem 3rem 3rem;
+    padding: 3rem;
+  }
+  .mixMatchHeadingContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    .mixMatchHeading {
+      text-decoration: underline;
+      font-weight: 100;
+      text-decoration-thickness: 2px;
+      letter-spacing: 1px;
+      margin-bottom: 2rem;
+    }
+  }
+
+  .btnContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+
+    .viewAllBtn {
+      background: #fff;
+      color: #000;
+      width: 15rem;
+      height: 4rem;
+      font-size: 2rem;
+      cursor: pointer;
+      transition: all .2s;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
 
