--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -57,4 +57,47 @@
   }
 }
 
+.footer {
+  background-color: #000;
+  color: #fff;
+
+  .footerContent {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 2rem;
+
+    .footerCol {
+      display: flex;
+      flex-direction: column;
+
+      .linkText {
+        color: #fff;
+        cursor: pointer;
+        margin-bottom: 1rem;
+      }
+
+      .iGIcon {
+        color: #fff;
+        margin-top: 1rem;
+        display: flex;
+        width: min-content;
+
+        & svg {
+          width: 20px;
+          height: 20px;
+        }
+      }
+
+      .form {
+        display: flex;
+        margin-top: 1rem;
+
+        .emailFormItem {
+          width:100%;
+        }
+      }
+    }
+  }
+}
 
