--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -99,5 +99,17 @@
       }
     }
   }
+
+  .copyrightContent {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .divider {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+  }
 }
 
