--- a/pages/collections/all/products/[productName]/productDetailsPage.module.scss
+++ b/pages/collections/all/products/[productName]/productDetailsPage.module.scss
@@ -1,5 +1,30 @@
 .container {
     position: relative;
     padding-left: 80px;
-    margin-top: 8rem;
+    padding-top: 4rem;
+    margin-top: 5rem;
+    background-color: #fff;
+
+    .imageGroup {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .sizeBtnGroup {
+        display: flex;
+        justify-content: space-around;
+
+        .sizeBtn {
+            border: none;
+            background-color: #fff;
+            cursor: pointer;
+            font-size: 1.7rem;
+        }
+
+        .sizeActive {
+            border: 1px solid black;
+        }
+    }
+    
 }
