--- a/pages/collections/all/products/[productName]/productDetailsPage.module.scss
+++ b/pages/collections/all/products/[productName]/productDetailsPage.module.scss
@@ -1,7 +1,6 @@
 .container {
     position: relative;
-    padding-left: 80px;
-    padding-top: 4rem;
+    padding: 4rem 3rem 1rem 80px;
     margin-top: 5rem;
     background-color: #fff;
 
@@ -9,6 +8,10 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+    }
+
+    .price {
+        margin: 1rem 0 !important;
     }
 
     .sizeBtnGroup {
@@ -26,5 +29,22 @@
             border: 1px solid black;
         }
     }
+
+    .sizeGuideContainer {
+        margin-top: 1rem;
+    }
     
+    .addBagBtn {
+        font-size: 2rem;
+        width: 100%;
+        height: 5rem;
+        margin-top: 2rem;
+        cursor: pointer;
+        background: linear-gradient(45deg, rgba(227, 225, 213, 0.894) 0%, rgba(228, 215, 159, 0.894) 100%);
+        transition: all .2s;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
