Add description and more details to product details page.

--- a/pages/collections/all/products/[productName]/productDetailsPage.module.scss
+++ b/pages/collections/all/products/[productName]/productDetailsPage.module.scss
@@ -47,4 +47,18 @@
             text-decoration: underline;
         }
     }
+
+    .detailsContainer {
+        margin-top: 2rem;
+        .description {
+            font-size: 2rem;
+        }
+
+        .moreDetails {
+            padding: 1rem;
+            .moreDetailsText {
+                font-size: 2rem;
+            }
+        }
+    }
 }
