Implement clicking on carousel image will navigate to 'all products' page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,17 +4,21 @@
 }
 
 .main {
-  .carouselItem {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .carouselImg {
-    width: 100%;
-    padding-bottom: 5px;
+  .carousel {
+    cursor: pointer;
 
+    .carouselItem {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .carouselImg {
+      width: 100%;
+      padding-bottom: 5px;
+  
+    }
   }
 
   .mixMatchSection {
