Create search products component in sidebar.

--- a/components/CarouselComp/CarouselComp.module.scss
+++ b/components/CarouselComp/CarouselComp.module.scss
@@ -1,5 +1,7 @@
 .carousel {
+    padding-top: 3rem;
     cursor: pointer;
+    background-color: rgba(214, 211, 199, 0.894);
 
     .carouselItem {
       height: 100%;
