--- a/components/SearchSidebar/SearchSidebar.module.scss
+++ b/components/SearchSidebar/SearchSidebar.module.scss
@@ -1,9 +1,49 @@
 .popoverContent {
-    width: 100%;
+    width: 250px;
 
-    .itemImage {
-        width: 100px;
-        height: 150px;
+    .popoverItem {
+        margin: 1rem 0;
+        padding: 1rem;
+        cursor: pointer;
+        &:hover {
+            text-decoration: underline;
+        }
+
+        .cardImgContainer {
+            display: flex;
+            justify-content: center;
+
+            .cardImg {
+                width: 100px;
+                height: 150px;
+            }
+        }
+
+        .cardDescContainer {
+            .itemName {
+                flex-wrap: wrap;
+            }
+
+        }
+    }
+
+    .viewBtnContainer {
+        display: flex;
+        justify-content: center;
+
+        .viewAllBtn {
+            margin-top: 1rem;
+            background-color:rgba(214, 211, 199, 1);
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            font-size: 1.5rem;
+            
+            &:hover {
+                box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+                text-decoration: underline;
+            }
+        }
     }
 }
 
