Test commit. Fix Nextjs and Typescript errors.

--- a/components/SearchSidebar/SearchSidebar.module.scss
+++ b/components/SearchSidebar/SearchSidebar.module.scss
@@ -13,10 +13,10 @@
             display: flex;
             justify-content: center;
 
-            .cardImg {
-                width: 100px;
-                height: 150px;
-            }
+            // .cardImg {
+            //     width: 100px;
+            //     height: 150px;
+            // }
         }
 
         .cardDescContainer {
