--- a/pages/collections/all/products/[productName]/productDetailsPage.module.scss
+++ b/pages/collections/all/products/[productName]/productDetailsPage.module.scss
@@ -1,6 +1,6 @@
 .container {
     position: relative;
-    padding: 4rem 3rem 1rem 80px;
+    padding: 4rem 3rem 1rem 10rem;
     margin-top: 5rem;
     background-color: #fff;
 
