--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,14 +51,22 @@ body {
   z-index: 100;
 
   .logo {
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: absolute;
     cursor: pointer;
     left: 40%;
-    margin-top: 1rem;
+    // margin-top: 1rem;
     margin-left: 80px;
+
+    @media screen and (max-width:768px) {
+      left: 15px;
+      width: 100px !important;
+    }
   }
+}
   .headerItem {
     display: flex;
     height: 100%;
@@ -77,8 +85,9 @@ body {
       margin-left: .7rem;
     }
   }
+
   .account {
     margin-left: 1rem;
   }
-}
+
 
