--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,26 +24,28 @@ body {
   background-color: rgba(4, 4, 4, 0.838);
   position: absolute;
   left: 200px;
-  z-index:300;
+  z-index: 300;
   animation: fadeIn .3s;
 
   @keyframes fadeIn {
     0% {
       opacity: 0;
     }
+
     100% {
       opacity: 1;
     }
   }
 }
 
-.mainContainer{
+.mainContainer {
   width: 100vw;
 }
 
 .header {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   background: rgba(214, 211, 199, 1);
   position: fixed;
   width: 100vw;
@@ -67,27 +69,45 @@ body {
     }
   }
 }
-  .headerItem {
-    display: flex;
-    height: 100%;
-    align-items: center;
+
+.headerMobileMenuToggle {
+  height: 3rem;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 10px;
+  border: none;
+  background-color: inherit;
+  color: #fff;
+
+  &:hover, &:focus {
     border: none !important;
-    color: white;
-    font-size: 1.7rem;
-    cursor: pointer;
-    z-index: 2;
+    background-color: inherit;
+    color: #fff;
+  }
+}
 
-    &:hover{
-      text-decoration: underline;
-    }
+.headerItem {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  border: none !important;
+  color: white;
+  font-size: 1.7rem;
+  cursor: pointer;
+  z-index: 2;
 
-    & span {
-      margin-left: .7rem;
-    }
+  &:hover {
+    text-decoration: underline;
   }
 
-  .account {
-    margin-left: 1rem;
+  & span {
+    margin-left: .7rem;
   }
+}
 
-
+.account {
+  margin-left: 1rem;
+}
